<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity"
    android:background="@color/backgroundColor">

    <!-- Título -->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"/>

    <!-- Botón de Inicio de Sesión con Google -->
    <Button
        android:id="@+id/sign_in_with_google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:backgroundTint="@color/primaryColor"/>

    <!-- Espacio -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Botón de Inicio de Sesión con Correo Electrónico -->
    <Button
        android:id="@+id/sign_in_with_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_email"
        android:backgroundTint="@color/primaryColor"/>

    <!-- Espacio -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Separador -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <!-- Espacio -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Botón de Inicio de Sesión Anónimo -->
    <Button
        android:id="@+id/sign_in_anonymously_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_anonymously"
        android:backgroundTint="@color/primaryColor"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />
    <TextView
        android:id="@+id/anonymous_login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anonymous_login_text"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="@color/textColor"/>
    <TextView
        android:id="@+id/goToRegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comenzar_registro"
        android:layout_marginTop="16dp"/>
</LinearLayout>